--- a/React/hello-world/src/components/CV/CV.css
+++ b/React/hello-world/src/components/CV/CV.css
@@ -1,30 +1,30 @@
-.result{
-    background-color: #333;
-    height: 100vh;
+.result {
+  background-color: #333;
+  height: 100vh;
 }
 
-.logo{
-    margin-left: auto;
-    margin-right: auto;
+.logo {
+  margin-left: auto;
+  margin-right: auto;
 }
-.result p{
-    color: white;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: larger;
-}
-
-.download{
-   margin-left: 30%;
-   display: flex;
+.result p {
+  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: larger;
 }
 
-.download button{
-    margin-right: 2%;
-    width: 30%;
+.download {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
 }
 
-.toHome{
-    width: 30%;
+.btn {
+  width: 20%;
+}
+
+.toHome {
+  width: 30%;
 }
